# template-fastapi

./: .dockerignore  entrypoint.sh  pyproject.toml
docker/: Dockerfile  compose.yaml
docs/: index.md
migrations/: env.py
migrations/versions/: cfa4ad0fe780_criando_tabela_de_usuarios.py
nginx/: nginx.conf
template_fastapi/: main.py
template_fastapi/api/: routers.py
template_fastapi/api/endpoints/api/: __init__.py  usuario.py
template_fastapi/core/: config.py  database.py
template_fastapi/models/: __init__.py  usuario.py
template_fastapi/models/mixins/: __init__.py  timestamp_mixin.py
template_fastapi/repositories/: __init__.py  base_repository.py  usuario_repository.py
template_fastapi/schemas/: usuario.py
template_fastapi/services/: usuario_service.py
template_fastapi/utils/: dependencies.py  security.py
